# fu

./: .gitignore  CMakeLists.txt  LICENSE-MIT  bench  bench-mem  bench-prep  bench-run  bicycle  bootstrap  cycle  diff  fu.sublime-project  gdb  package.json  port.js  profile.md  projects.md  recycle  reduce.js  release-safe  reset  server.js  test.js  tsconfig.json  watch  watch.fu  watch.js
cpp/lib/: BitSet.fu.cpp  FD.fu.cpp  ascii.fu.cpp  env.fu.cpp  exec.fu.cpp  file.fu.cpp  fs.fu.cpp  path.fu.cpp  rand.fu.cpp  signal.fu.cpp  spawn.fu.cpp  tea.fu.cpp  utf8.fu.cpp
cpp/lib/ev/: Loop.fu.cpp  dbg.fu.cpp
cpp/src/: ansi.fu.cpp  build.fu.cpp  canon.fu.cpp  cli.fu.cpp  cli.fu.unity.cpp  codegen.fu.cpp  compiler.fu.cpp  context.fu.cpp  cpp.fu.cpp  experiments.fu.cpp  fail.fu.cpp  flags.fu.cpp  fudir.fu.cpp  hacks.fu.cpp  helpers.fu.cpp  inspect.fu.cpp  levenshtein.fu.cpp  lexer.fu.cpp  lifetime.fu.cpp  module.fu.cpp  options.fu.cpp  parser.fu.cpp  prelude.fu.cpp  profiler.fu.cpp  quals.fu.cpp  scope.fu.cpp  solver.fu.cpp  stat.fu.cpp  structs.fu.cpp  test_output.fu.cpp  test_utils.fu.cpp  tests.fu.cpp  types.fu.cpp  usage.fu.cpp  usertypes.fu.cpp
fulang/fulang/: main.cpp
hacking/: cow_vec_test.hpp  main.cpp  task_stack.hpp  task_stack_test.hpp
include/dl/: hotswap.cpp  hotswap.hpp
include/fu/: _fulib.cpp  arc.h  assert.h  cfg.h  cow_vec_test.h  decstr.cpp  decstr.h  default.h  defer.h  env.h  export.h  hotswap.cpp  hotswap.h  init_priority.h  inl.h  int.h  io.h  map.h  move_or_default.h  never.cpp  never.h  now.h  print.cpp  print.h  process.h  shell.h  static_ref.h  std.h  str.h  tea.h  util.h  vec.h  vec_range.h  view.h  void_vec.h  zeroes.h
include/fu/algo/: binary_search.h
include/fu/debug/: backtrace.cpp
include/fu/mem/: alloc.h  arc.cpp  arc.h  endian.h  lf_alloc.cpp  lf_free_list.h  memswap.cpp  memswap.h  next_log2.h  next_pow2.h  util.h
include/fu/ooe/: get.h
include/fu/time/: usec_now.cpp
include/fu/vec/: LEGACY_cmp.h  LEGACY_find.h  LEGACY_slice.h  c_str.h  cmp.h  concat.h  concat_one.h  concat_str.h  find.h  join.h  maybe_pos.h  replace.h  slice.h  sort.h  split.h  view_assign.h  view_swap.h
include/lockfree/: stack.hpp
include/par/: parfor.cpp  parfor.hpp
include/task/: batch.hpp  parallel_for.hpp  pool.hpp
lib/: BitSet.fu  BitSet.fu.cpp  Errno.fu  Errno.fu.cpp  FD.fu  FD.fu.cpp  alloc.fu  alloc.h  ansi.fu  ansi.fu.cpp  arc.h  ascii.fu  ascii.fu.cpp  bit.fu  bitset.fu.cpp  cfg.h  cow_vec.h  cow_vec_test.h  debug.fu  debug.fu.cpp  decstr.fu  defer.h  env.fu  env.fu.cpp  env.h  exec.fu  exec.fu.cpp  file.fu  file.fu.cpp  find.h  fs.fu  fs.fu.cpp  hash.fu  hotswap.fu  io.h  map.h  mat34.fu  mat4.fu  mem.fu  now.fu  (+32 more)
lib/algo/: fbstring_lfind.h
lib/ev/: HTTP.fu  Loop.fu  Loop.fu.cpp  Pool.fu  dbg.fu  dbg.fu.cpp
lib/gl/: gl.fu  render.fu
lib/gl/glad/include/glad/: glad.h
lib/gl/glad/src/: glad.c
lib/gl/glfw/: input.fu  window.fu
lib/gl/opengl/: Array.fu  BlendState.fu  Buffer.fu  FBO.fu  Loop.fu  Mesh.fu  OpenGL.fu  ROPState.fu  Shader.fu  Tex.fu  TexUnits.fu  UBO.fu  VAO.fu  dbg.fu  quirks.fu  shims.fu  utils.fu
lib/mem/: alloc.h
lib/ui/: BDF.fu  BitmapFont.fu  EmbeddedBitmapFont.fu  Font.fu  Gohufont14.fu  gohu6x11.fu  gohu8x14.fu  misc4x6.fu  misc5x7.fu  misc6x12.fu  misc6x9.fu  misc9x15.fu  misc9x18.fu
lib/vec/: find.h  join.h  replace.h
playground/: CMakeLists.txt  cow_vec_test.hpp  main.cpp  parfor_test.hpp
src/: CMakeLists.txt  addroffn.fu  addroffn.fu.cpp  ansi.fu  ansi.fu.cpp  bench-after.md  bench-before.md  bitset.fu  bitset.fu.cpp  build.fu  build.fu.cpp  canon.fu  canon.fu.cpp  cli.fu  cli.fu.cpp  cli.fu.unity.cpp  codegen.fu  codegen.fu.cpp  codegen_cpp.ts  commons.ts  compiler.fu  compiler.fu.cpp  context.fu  context.fu.cpp  context.ts  cow_vec.h  cow_vec_test.h  cpp.fu  cpp.fu.cpp  cpp_builder.ts  cpp_codegen.ts  dep_depth.md  effects.fu  effects.fu.cpp  experiments.fu  experiments.fu.cpp  fail.fu  fail.fu.cpp  fail.ts  file.fu  (+81 more)
src/fu/: compiler.fu  compiler.fu.cpp  cpp_codegen.fu  lex.fu  parse.fu  solve.fu
src/lib/: CountedSet.fu  ansi.fu  ansi.fu.cpp  bitset.fu  bitset.fu.cpp  blob.fu  debug.fu  debug.fu.cpp  map.fu  set.fu
static/: test.html
testdiff/: now.td
util/: hello.fu  watch.fu
